appId: com.davilte.tafaltando
env:
    EMAIL: "davi@email.com"
    PASSWORD: "123"
---
# Abrir app
- launchApp

- tapOn:
    id: input-email
- inputText: ${EMAIL}

- tapOn:
    id: input-password
- inputText: ${PASSWORD}

- tapOn:
    id: button-login

- assertVisible: "Home"